@@ -1,5 +1,5 @@
 // Copyright (C) 2000 Phil Dawes
-// Copyright (C) 2000, 2001, 2002, 2003 Philip Aston
+// Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005 Philip Aston
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -110,7 +110,8 @@ public final class PortForwarderTCPProxyEngine extends AbstractTCPProxyEngine {
 
       try {
         launchThreadPair(localSocket, m_connectionDetails.getRemoteEndPoint(),
-                         EndPoint.clientEndPoint(localSocket), false);
+                         EndPoint.clientEndPoint(localSocket),
+                         m_connectionDetails.isSecure());
       }
       catch (IOException e) {
         logIOException(e);
